# paper-fetch

./: .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  debug_ieee_api.py  debug_ieee_oa.py  download_3gpp_auto.sh  main.py  pyproject.toml  test_server.py
docs/: configuration.md  contributing.md  design.md  features.md  installation.md  notebooklm.md  sources.md  troubleshooting.md  usage.md
src/: cli.py  gui.py  server.py  test_results.json
src/fetchers/: arxiv.py  base.py  ieee.py  models.py  utils.py
src/paper_fetch/: cli.py  config.py  config_wizard.py  converter.py  gui.py  server.py
src/paper_fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/paper_fetch/exporters/: notebooklm.py
src/paper_fetch/fetchers/: __init__.py  arxiv.py  base.py  ieee.py  models.py  threegpp.py  uspto.py  utils.py
src/paper_fetch/gui_items/: fetcher_info.py  operater.py  results.py  search.py  session_manager.py  state.py  style.py
