[project]
name = "paper-fetch"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "mcp>=1.22.0",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "questionary>=2.0.0",
]

[project.scripts]
paper-fetch = "paper_fetch.cli:main"
paper-fetch-gui = "paper_fetch.gui:main"
paper-fetch-mcp = "paper_fetch.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
